--- a/src/components/topbar/topbar.css
+++ b/src/components/topbar/topbar.css
@@ -1,81 +1,178 @@
+#basic-nav-dropdown {
+  color: white;
+}
+.topbar {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: 1040; /* Ensure it stays above other elements */
+  background-color: #3e3232; /* Adjust as needed */
+  color: white;
+  padding: 1px 1px 1px 1px; /* Add some padding for better spacing */
+}
+
+.navbar-main {
+  position: fixed;
+  top: 50px; /* Adjust to match the height of the topbar */
+  width: 100%;
+  z-index: 1030; /* Ensure it stays below the topbar */
+  background-color: #503c3c; /* Ensure this matches the background color in JSX */
+  padding: 1px 1px 1px 1px; /* Add some padding for better spacing */
+}
+body {
+  padding-top: 120px; /* Adjust based on the combined height of both navbars */
+}
 
 .wrap {
-    position: relative;
-    z-index: 0;
-    width: 100%;
-    background: #ADBBDA;
+  position: relative;
+  z-index: 0;
+  width: 100%;
+  background: #3e3232;
 }
 @media (min-width: 768px) {
-    .container {
-      max-width: 720px;
-    }
+  .container {
+    max-width: 720px;
   }
+}
 .container {
-    width: 100%;
-    padding-right: 15px;
-    padding-left: 15px;
-    margin-right: auto;
-    margin-left: auto;
+  width: 100%;
+  padding-right: 15px;
+  padding-left: 15px;
+  margin-right: auto;
+  margin-left: auto;
 }
 .row {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -ms-flex-wrap: wrap;
-    flex-wrap: wrap;
-    margin-right: -15px;
-    margin-left: -15px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+  margin-right: -15px;
+  margin-left: -15px;
 }
 .align-items-center {
-    -webkit-box-align: center !important;
-    -ms-flex-align: center !important;
-    align-items: center !important;
-  }
-  .d-flex {
-    display: -webkit-box !important;
-    display: -ms-flexbox !important;
-    display: flex !important;
-  }
-  @media (min-width: 768px) {
-    .col-md-6 {
-      -webkit-box-flex: 0;
-      -ms-flex: 0 0 50%;
-      flex: 0 0 50%;
-      max-width: 50%;
-    }
-  }
-.col-1, .col-2, .col-3, .col-4, .col-5, .col-6, .col-7, .col-8, .col-9, .col-10, .col-11, .col-12, .col, .col-auto, .col-sm-1, .col-sm-2, .col-sm-3, .col-sm-4, .col-sm-5, .col-sm-6, .col-sm-7, .col-sm-8, .col-sm-9, .col-sm-10, .col-sm-11, .col-sm-12, .col-sm, .col-sm-auto, .col-md-1, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-10, .col-md-11, .col-md-12, .col-md, .col-md-auto, .col-lg-1, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-10, .col-lg-11, .col-lg-12, .col-lg, .col-lg-auto, .col-xl-1, .col-xl-2, .col-xl-3, .col-xl-4, .col-xl-5, .col-xl-6, .col-xl-7, .col-xl-8, .col-xl-9, .col-xl-10, .col-xl-11, .col-xl-12, .col-xl, .col-xl-auto {
-    position: relative;
-    width: 100%;
-    padding-right: 15px;
-    padding-left: 15px;
+  -webkit-box-align: center !important;
+  -ms-flex-align: center !important;
+  align-items: center !important;
 }
-*, ::before, ::after {
-    -webkit-box-sizing: border-box;
-    box-sizing: border-box;
+.d-flex {
+  display: -webkit-box !important;
+  display: -ms-flexbox !important;
+  display: flex !important;
+}
+@media (min-width: 768px) {
+  .col-md-6 {
+    -webkit-box-flex: 0;
+    -ms-flex: 0 0 50%;
+    flex: 0 0 50%;
+    max-width: 50%;
+  }
+}
+.col-1,
+.col-2,
+.col-3,
+.col-4,
+.col-5,
+.col-6,
+.col-7,
+.col-8,
+.col-9,
+.col-10,
+.col-11,
+.col-12,
+.col,
+.col-auto,
+.col-sm-1,
+.col-sm-2,
+.col-sm-3,
+.col-sm-4,
+.col-sm-5,
+.col-sm-6,
+.col-sm-7,
+.col-sm-8,
+.col-sm-9,
+.col-sm-10,
+.col-sm-11,
+.col-sm-12,
+.col-sm,
+.col-sm-auto,
+.col-md-1,
+.col-md-2,
+.col-md-3,
+.col-md-4,
+.col-md-5,
+.col-md-6,
+.col-md-7,
+.col-md-8,
+.col-md-9,
+.col-md-10,
+.col-md-11,
+.col-md-12,
+.col-md,
+.col-md-auto,
+.col-lg-1,
+.col-lg-2,
+.col-lg-3,
+.col-lg-4,
+.col-lg-5,
+.col-lg-6,
+.col-lg-7,
+.col-lg-8,
+.col-lg-9,
+.col-lg-10,
+.col-lg-11,
+.col-lg-12,
+.col-lg,
+.col-lg-auto,
+.col-xl-1,
+.col-xl-2,
+.col-xl-3,
+.col-xl-4,
+.col-xl-5,
+.col-xl-6,
+.col-xl-7,
+.col-xl-8,
+.col-xl-9,
+.col-xl-10,
+.col-xl-11,
+.col-xl-12,
+.col-xl,
+.col-xl-auto {
+  position: relative;
+  width: 100%;
+  padding-right: 15px;
+  padding-left: 15px;
+}
+*,
+::before,
+::after {
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
 }
 .wrap .phone {
-    z-index: 1;
+  z-index: 1;
 }
-.mb-0, .my-0 {
-    margin-bottom: 0 !important;
+.mb-0,
+.my-0 {
+  margin-bottom: 0 !important;
 }
 p {
-    margin-top: 0;
-    margin-bottom: 1rem;
+  margin-top: 0;
+  margin-bottom: 1rem;
 }
 .wrap .phone a {
-    color: #141619;
-    font-size: 12px;
+  color: #141619;
+  font-size: 12px;
 }
-.mr-2, .mx-2 {
-    margin-right: 0.5rem !important;
+.mr-2,
+.mx-2 {
+  margin-right: 0.5rem !important;
 }
 a {
-    -webkit-transition: .3s all ease;
-    -o-transition: .3s all ease;
-    transition: .3s all ease;
-    color: #589167;
+  -webkit-transition: 0.3s all ease;
+  -o-transition: 0.3s all ease;
+  transition: 0.3s all ease;
+  color: #589167;
 }
 a {
   color: #141619;
@@ -83,48 +180,49 @@ a {
   background-color: transparent;
 }
 .wrap .phone span {
-    color: #141619;
+  color: #141619;
 }
-.mr-1, .mx-1 {
+.mr-1,
+.mx-1 {
   margin-right: 0.25rem !important;
 }
 .fa {
-    display: inline-block;
-    font: normal normal normal 14px/1 FontAwesome;
-      font-size: 14px;
-    font-size: inherit;
-    text-rendering: auto;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
+  display: inline-block;
+  font: normal normal normal 14px/1 FontAwesome;
+  font-size: 14px;
+  font-size: inherit;
+  text-rendering: auto;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 .fa-phone::before {
-    content: "\f095";
+  content: "\f095";
 }
 .social-media {
-    display: inline-block;
-  }
-  .social-media p a {
-    color: #141619;
-    width: 40px;
-    height: 40px;
-    margin-right: 1px;
-  }
-  .justify-content-center {
-    -webkit-box-pack: center !important;
-    -ms-flex-pack: center !important;
-    justify-content: center !important;
-  }
-  .phone .a .fa-phone{
-    color: #141619;
-  }
+  display: inline-block;
+}
+.social-media p a {
+  color: #141619;
+  width: 40px;
+  height: 40px;
+  margin-right: 1px;
+}
+.justify-content-center {
+  -webkit-box-pack: center !important;
+  -ms-flex-pack: center !important;
+  justify-content: center !important;
+}
+.phone .a .fa-phone {
+  color: #141619;
+}
 
 /* css for navbar */
-navbar{
-  background-color: 141619;
+navbar {
+  background-color: #141619;
 }
 .nav .navdropdown {
   color: #141619; /* Replace with your desired color */
 }
-.bg-dark{
-  background-color: #EDE8F5;
+.bg-dark {
+  background-color: #ede8f5;
 }
