--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -8,19 +8,19 @@
   position: relative;
   z-index: 0;
 }
-  @media (min-width: 992px) {
-    .container {
-      max-width: 960px;
-    }
-  }
+@media (min-width: 992px) {
   .container {
-    width: 100%;
-    padding-right: 15px;
-    padding-left: 15px;
-    margin-right: auto;
-    margin-left: auto;
+    max-width: 960px;
   }
-  /* .ftco-animate {
+}
+.container {
+  width: 100%;
+  padding-right: 15px;
+  padding-left: 15px;
+  margin-right: auto;
+  margin-left: auto;
+}
+/* .ftco-animate {
     opacity: 0;
     visibility: hidden;
   }
@@ -34,7 +34,7 @@
     -webkit-animation-fill-mode: both;
     animation-fill-mode: both;
   } */
-  /*
+/*
   .slider-text {
     height: 850px;
     position: relative;
@@ -196,21 +196,20 @@
     color: #141619;
     font-size: 24px;
   } */
-  
 
-section{
+section {
   display: block;
 }
 .no-gutters > .col-md-3 {
   padding-left: 0;
   padding-right: 0;
 }
-.row{
+.row {
   display: flex;
   flex-wrap: wrap;
 }
 .intro.color-1 {
-  background: #ADBBDA;
+  background: #a87c7c;
 }
 @media (min-width: 768px) {
   .ftco-intro .intro {
@@ -223,11 +222,11 @@ section{
 }
 .intro {
   width: 100%;
-  background: #ADBBDA;
+  background: #a87c7c;
   padding: 30px;
 }
 .ftco-intro .intro.aside-stretch {
-  background: #ADBBDA;
+  background: #a87c7c;
 }
 @media (min-width: 768px) {
   .ftco-intro .intro {
@@ -271,29 +270,31 @@ p {
   top: 0;
   right: 100%;
   bottom: 0;
-  content: '';
+  content: "";
   width: 360%;
-  background: #ADBBDA;
+  background: #a87c7c;
   z-index: 99;
 }
-*, ::before, ::after {
+*,
+::before,
+::after {
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
 }
 
-.analysis{
+.analysis {
   padding: 6em 0;
   position: relative;
 }
 
-.col-md-3{
+.col-md-3 {
   position: relative;
   max-width: 25%;
   padding-right: 15px;
   padding-left: 15px;
 }
 
-.analysis1{
+.analysis1 {
   width: 100%;
   display: block;
   padding: 0;
@@ -305,22 +306,22 @@ p {
 }
 
 .person {
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3); 
-  border: none;                             
-  transition: box-shadow 0.3s ease;         
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+  border: none;
+  transition: box-shadow 0.3s ease;
 }
 
 .person:hover {
   box-shadow: 0 8px 16px rgba(0, 0, 0, 0.4); /* Increase shadow on hover */
 }
 
-.img{
+.img {
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center center;
 }
 
-.col-md-6{
+.col-md-6 {
   position: relative;
   width: 100%;
   padding-right: 15px;
@@ -346,15 +347,15 @@ p {
   color: rgba(0, 0, 0, 0.7);
 }
 
-.heading-section p{
+.heading-section p {
   font-weight: 400;
   color: grey;
 }
 
 a {
-  -webkit-transition: .3s all ease;
-  -o-transition: .3s all ease;
-  transition: .3s all ease;
+  -webkit-transition: 0.3s all ease;
+  -o-transition: 0.3s all ease;
+  transition: 0.3s all ease;
   color: #7091e6;
 }
 a {
@@ -375,16 +376,16 @@ a {
 
 @keyframes pulse {
   0% {
-      transform: scale(1);
-      opacity: 1;
+    transform: scale(1);
+    opacity: 1;
   }
   50% {
-      transform: scale(1.1);
-      opacity: 0.5;
+    transform: scale(1.1);
+    opacity: 0.5;
   }
   100% {
-      transform: scale(1);
-      opacity: 1;
+    transform: scale(1);
+    opacity: 1;
   }
 }
 
@@ -403,5 +404,3 @@ a {
   line-height: 1.8;
   font-weight: 400;
 }
-
-
