--- a/src/components/topbar/topbar.css
+++ b/src/components/topbar/topbar.css
@@ -5,10 +5,10 @@
   position: fixed;
   top: 0;
   width: 100%;
-  z-index: 1040; /* Ensure it stays above other elements */
-  background-color: #3e3232; /* Adjust as needed */
+  z-index: 1040; 
+  background-color: #3e3232; 
   color: white;
-  padding: 1px 1px 1px 1px; /* Add some padding for better spacing */
+  padding: 1px 1px 1px 1px; 
 }
 
 .navbar-main {
@@ -20,7 +20,7 @@
   padding: 1px 1px 1px 1px; /* Add some padding for better spacing */
 }
 body {
-  padding-top: 120px; /* Adjust based on the combined height of both navbars */
+  padding-top: 120px; 
 }
 
 .wrap {
@@ -28,6 +28,7 @@ body {
   z-index: 0;
   width: 100%;
   background: #3e3232;
+  
 }
 @media (min-width: 768px) {
   .container {
@@ -68,34 +69,6 @@ body {
     max-width: 50%;
   }
 }
-.col-1,
-.col-2,
-.col-3,
-.col-4,
-.col-5,
-.col-6,
-.col-7,
-.col-8,
-.col-9,
-.col-10,
-.col-11,
-.col-12,
-.col,
-.col-auto,
-.col-sm-1,
-.col-sm-2,
-.col-sm-3,
-.col-sm-4,
-.col-sm-5,
-.col-sm-6,
-.col-sm-7,
-.col-sm-8,
-.col-sm-9,
-.col-sm-10,
-.col-sm-11,
-.col-sm-12,
-.col-sm,
-.col-sm-auto,
 .col-md-1,
 .col-md-2,
 .col-md-3,
@@ -108,46 +81,11 @@ body {
 .col-md-10,
 .col-md-11,
 .col-md-12,
-.col-md,
-.col-md-auto,
-.col-lg-1,
-.col-lg-2,
-.col-lg-3,
-.col-lg-4,
-.col-lg-5,
-.col-lg-6,
-.col-lg-7,
-.col-lg-8,
-.col-lg-9,
-.col-lg-10,
-.col-lg-11,
-.col-lg-12,
-.col-lg,
-.col-lg-auto,
-.col-xl-1,
-.col-xl-2,
-.col-xl-3,
-.col-xl-4,
-.col-xl-5,
-.col-xl-6,
-.col-xl-7,
-.col-xl-8,
-.col-xl-9,
-.col-xl-10,
-.col-xl-11,
-.col-xl-12,
-.col-xl,
-.col-xl-auto {
+.col-md {
   position: relative;
   width: 100%;
   padding-right: 15px;
   padding-left: 15px;
-}
-*,
-::before,
-::after {
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box;
 }
 .wrap .phone {
   z-index: 1;
