--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -20,183 +20,6 @@
   margin-right: auto;
   margin-left: auto;
 }
-/* .ftco-animate {
-    opacity: 0;
-    visibility: hidden;
-  }
-  .fadeInUp {
-    -webkit-animation-name: fadeInUp;
-    animation-name: fadeInUp;
-  }
-  .ftco-animated {
-    -webkit-animation-duration: .5s;
-    animation-duration: .5s;
-    -webkit-animation-fill-mode: both;
-    animation-fill-mode: both;
-  } */
-/*
-  .slider-text {
-    height: 850px;
-    position: relative;
-  }
-  .align-items-center {
-    -webkit-box-align: center !important;
-    -ms-flex-align: center !important;
-    align-items: center !important;
-  }
-  .no-gutters {
-    margin-right: 0;
-    margin-left: 0;
-  }
-  .row {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -ms-flex-wrap: wrap;
-    flex-wrap: wrap;
-    margin-right: -15px;
-    margin-left: -15px;
-  }
-  .ftco-animate {
-    opacity: 0;
-    visibility: hidden;
-  }
-  .align-items-end {
-    -webkit-box-align: end !important;
-    -ms-flex-align: end !important;
-    align-items: flex-end !important;
-  }
-  .d-flex {
-    display: flex !important;
-  }
-  .fadeInUp {
-    -webkit-animation-name: fadeInUp;
-    animation-name: fadeInUp;
-  }
-  .ftco-animated {
-    -webkit-animation-duration: .5s;
-    animation-duration: .5s;
-    -webkit-animation-fill-mode: both;
-    animation-fill-mode: both;
-  }
-  .w-100 {
-    width: 100% !important;
-  }
-  .slider-text h1 {
-    font-size: 60px;
-    color: #000000;
-    line-height: 1.1;
-    font-weight: 500;
-  }
-  .mb-4, .my-4 {
-    margin-bottom: 1.5rem !important;
-  }
-  h1 {
-    margin-bottom: 0.5rem;
-    font-family: inherit;
-    font-weight: 500;
-    line-height: 1.2;
-    color: inherit;
-  }
-  h1 {
-    margin-top: 0;
-    margin-bottom: 0.5rem;
-  }
-  .slider-text p {
-    font-size: 18px;
-    line-height: 1.5;
-    color: rgba(0, 0, 0, 0.8);
-  }
-  p {
-    margin-top: 0;
-  }
-  .btn:not(:disabled):not(.disabled) {
-    cursor: pointer;
-  }
-  .btn.btn-primary {
-    background: #589167 !important;
-    border: 1px solid #589167 !important;
-    color: #fff !important;
-  }
-  .btn {
-    border-radius: 3px;
-    box-shadow: none !important;
-    font-size: 15px;
-    font-weight: 500;
-  }
-  .pl-4, .px-4 {
-    padding-left: 1.5rem !important;
-  }
-  .pr-4, .px-4 {
-    padding-right: 1.5rem !important;
-  }
-  .pb-3, .py-3 {
-    padding-bottom: 1rem !important;
-  }
-  .pt-3, .py-3 {
-    padding-top: 1rem !important;
-  }
-  .btn {
-    display: inline-block;
-    text-align: center;
-    vertical-align: middle;
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
-    background-color: transparent;
-    border: 1px solid transparent;
-    padding: 0.375rem 0.75rem;
-    font-size: 1rem;
-    line-height: 1.5;
-    border-radius: 0.25rem;
-    -webkit-transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, -webkit-box-shadow 0.15s ease-in-out;
-    transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, -webkit-box-shadow 0.15s ease-in-out;
-    -o-transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
-    transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
-    transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out, -webkit-box-shadow 0.15s ease-in-out;
-  }
-  a {
-    color: #007bff;
-    text-decoration: none;
-    background-color: transparent;
-  }
-  .btn.btn-white {
-    background: ##141619 !important;
-    border: 1px solid ##141619 !important;
-    color: #000000 !important;
-  }
-  @media (max-width: 767.98px) {
-    .slider-text .img-video {
-      bottom: 80px;
-      left: 0;
-    }
-  }
-  .slider-text .img-video {
-    display: block;
-    width: 80px;
-    height: 80px;
-    border-radius: 50%;
-    background: #141619;
-    -webkit-animation: pulse 2s infinite;
-    animation: pulse 2s infinite;
-    position: absolute;
-  }
-  .justify-content-center {
-    -webkit-box-pack: center !important;
-    -ms-flex-pack: center !important;
-    justify-content: center !important;
-  }
-  a {
-    -o-transition: .3s all ease;
-    transition: .3s all ease;
-    color: #141619;
-  }
-  .slider-text .img-video span {
-    color: #141619;
-    font-size: 24px;
-  } */
-
 section {
   display: block;
 }
@@ -329,12 +152,11 @@ p {
 }
 
 .heading-section .subheading {
-  font-size: 18px;
+  font-size: 14px;
   display: inline-block;
   margin-bottom: 0;
-  color: #7091e6;
-  font-size: 12px;
-  font-weight: 600;
+  color: #3e3232;
+  font-weight: 700;
   letter-spacing: 2px;
   text-transform: uppercase;
   position: relative;
@@ -432,4 +254,79 @@ a {
   background: linear-gradient(135deg, #ffff, #503c3c);
   padding: 10px 10px 10px 10px;
   padding-left: 15px;
+}
+
+.col-md-8, .col-xl-3{
+  position: relative;
+  width: 100%;
+  padding-right: 15px;
+  padding-left: 15px;
+}
+.services-area .single-service-cap {
+  overflow: hidden;
+}
+
+.services-area .single-service-cap .service-img {
+  overflow: hidden;
+}
+.services-area .single-service-cap:hover .service-img img {
+  transform: scale(1.1);
+}
+.services-area .single-service-cap .service-img img {
+  width: 100%;
+  transform: scale(1);
+  -webkit-transition: all .5s ease-out 0s;
+  -moz-transition: all .5s ease-out 0s;
+  -ms-transition: all .5s ease-out 0s;
+  -o-transition: all .5s ease-out 0s;
+  transition: all .5s ease-out 0s;
+}
+.services-area .single-service-cap .service-cap {
+  padding: 20px 30px 20px 30px;
+  background: #fcfdff;
+}
+
+.services-area .single-service-cap .service-cap h4 {
+  margin-bottom: 35px;
+}
+
+.services-area .single-service-cap .service-cap h4 a {
+  color: #0e132a;
+  font-size: 24px;
+  font-weight: 600;
+  transition: all .3s ease-out 0s;
+  outline: medium none;
+}
+.services-area .single-service-cap .service-cap h4 a:hover {
+  color: #a87c7c;
+}
+.more-btn {
+  color: #161e46;
+  font-size: 14px;
+  font-weight: 500;
+  display: block;
+  margin-bottom: 10px;
+}
+.more-btn:hover {
+  color: #7e6363;
+}
+.single-service-cap:hover .more-btn i {
+  color: #fff;
+  background: #7e6363;
+}
+.more-btn i {
+  color: #161e46;
+  background: transparent;
+  width: 38px;
+  height: 38px;
+  display: inline-block;
+  line-height: 38px;
+  text-align: center;
+  font-size: 15px;
+  margin-left: 10px;
+  -webkit-transition: all .4s ease-out 0s;
+  -moz-transition: all .4s ease-out 0s;
+  -ms-transition: all .4s ease-out 0s;
+  -o-transition: all .4s ease-out 0s;
+  transition: all .4s ease-out 0s;
 }
