--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -105,6 +105,98 @@ p {
   box-sizing: border-box;
 }
 
+/* services */
+.services{
+  padding: 6em 0;
+  position: relative;
+}
+
+@media (min-width: 768px) {
+  .container {
+    max-width: 720px;
+  }
+}
+
+@media (min-width: 768px) {
+  .col-md-7 {
+    -webkit-box-flex: 0;
+    -ms-flex: 0 0 58.33333%;
+    flex: 0 0 58.33333%;
+    max-width: 58.33333%;
+  }
+}
+
+@media (min-width: 768px) {
+  .col-md-3 {
+    -webkit-box-flex: 0;
+    -ms-flex: 0 0 33.33333%;
+    flex: 0 0 33.33333%;
+    max-width: 33.33333%;
+  }
+}
+
+.services-2 {
+  width: 100%;
+  display: block;
+  padding: 0;
+  -moz-transition: all 0.3s ease;
+  -o-transition: all 0.3s ease;
+  -webkit-transition: all 0.3s ease;
+  -ms-transition: all 0.3s ease;
+  transition: all 0.3s ease;
+}
+.services-2 .icon-wrap {
+  position: relative;
+  width: 170px;
+  height: 170px;
+  margin: 0 auto;
+    margin-bottom: 0px;
+  margin-bottom: 10px;
+  z-index: 0;
+}
+.services-2:hover .icon-wrap .number {
+  background: #fff;
+  box-shadow: 0px 4px 15px -6px rgba(0, 0, 0, 0.15);
+}
+.services-2 .icon-wrap .number {
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  z-index: 1;
+  background: #503c3c;
+  border: 5px solid #fff;
+}
+.services-2 .icon-wrap .number span {
+  font-weight: 500;
+  color: #fff;
+}
+.services-2:hover .icon-wrap .number span {
+  color: #503c3c;
+}
+.services-2 .icon {
+  width: 170px;
+  height: 170px;
+  border-radius: 50%;
+  background: #f5f4f0;
+  margin: 0 auto;
+    margin-bottom: 0px;
+  margin-bottom: 10px;
+  position: relative;
+  z-index: 0;
+  -moz-transition: all 0.3s ease;
+  -o-transition: all 0.3s ease;
+  -webkit-transition: all 0.3s ease;
+  -ms-transition: all 0.3s ease;
+  transition: all 0.3s ease;
+}
+.services-2 .icon span {
+  font-size: 70px;
+  color: #000000;
+}
+
 .analysis {
   padding: 6em 0;
   position: relative;
@@ -256,7 +348,7 @@ a {
   padding-left: 15px;
 }
 
-.col-md-8, .col-xl-3{
+.col-md-8, .col-xl-3, .col-md-7{
   position: relative;
   width: 100%;
   padding-right: 15px;
