--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -236,6 +236,8 @@ p {
   color: grey;
 }
 
+/* analysis */
+
 .analysis {
   padding: 6em 0;
   position: relative;
@@ -387,7 +389,7 @@ a {
   padding-left: 15px;
 }
 
-.col-md-8, .col-xl-3, .col-md-7{
+.col-md-8, .col-xl-3, .col-md-7, .col-md-12{
   position: relative;
   width: 100%;
   padding-right: 15px;
@@ -460,4 +462,152 @@ a {
   -ms-transition: all .4s ease-out 0s;
   -o-transition: all .4s ease-out 0s;
   transition: all .4s ease-out 0s;
+}
+
+/* testimony */
+.testimony-section {
+  position: relative;
+  z-index: 0;
+  padding: 6em 0;
+  margin-bottom: 100px;
+}
+.testimony-section .img-bg {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  content: '';
+  height: 400px;
+}
+.border {
+  border: 1px solid #dee2e6 !important;
+}
+.testimony-section .overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  content: '';
+  height: 400px;
+  background: #a87c7c;
+  opacity: .8;
+}
+.heading-section.heading-section-white .subheading {
+  color: rgba(255, 255, 255, 0.9);
+}
+.heading-section.heading-section-white h2 {
+  font-size: 40px;
+  color: #fff;
+}
+
+@media (min-width: 768px) {
+  .col-md-12 {
+    -webkit-box-flex: 0;
+    -ms-flex: 0 0 100%;
+    flex: 0 0 100%;
+    max-width: 100%;
+  }
+}
+.testimony-section .owl-carousel {
+  margin: 0;
+}
+.owl-carousel.owl-loaded {
+  display: block;
+}
+.owl-carousel {
+  position: relative;
+}
+.owl-carousel {
+  width: 100%;
+  z-index: 1;
+}
+.testimony-section .owl-carousel .owl-stage-outer {
+  padding: 1.5em 0 2em 0;
+  position: relative;
+}
+.owl-carousel .owl-stage-outer {
+  position: relative;
+  overflow: hidden;
+}
+.owl-carousel .owl-stage::after {
+  content: ".";
+  display: block;
+  clear: both;
+  visibility: hidden;
+  line-height: 0;
+  height: 0;
+}
+.owl-carousel .owl-stage {
+  position: relative;
+  touch-action: manipulation;
+  
+}
+.owl-carousel.owl-drag .owl-item {
+  touch-action: pan-y;
+}
+.owl-carousel.owl-drag .owl-item {
+  -ms-touch-action: none;
+  touch-action: none;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+.owl-carousel .owl-item {
+  opacity: .4;
+}
+.owl-carousel .owl-item {
+  min-height: 1px;
+  float: left;
+  -webkit-backface-visibility: hidden;
+}
+.owl-carousel .owl-item, .owl-carousel .owl-wrapper {
+  -webkit-backface-visibility: hidden;
+  -moz-backface-visibility: hidden;
+  -ms-backface-visibility: hidden;
+  -webkit-transform: translate3d(0,0,0);
+  -moz-transform: translate3d(0,0,0);
+  -ms-transform: translate3d(0,0,0);
+}
+.owl-carousel .owl-item {
+  position: relative;
+}
+.testimony-wrap {
+  display: block;
+  position: relative;
+  background: white;
+  padding: 0 20px;
+  border-radius: 4px;
+  box-shadow: 0px 30px 33px -41px rgba(0, 0, 0, 0.24);
+}
+.testimony-wrap .icon {
+  position: absolute;
+  top: -20px;
+  left: 20px;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  background: #7e6363;
+}
+.testimony-wrap .icon span {
+  color: #fff;
+}
+.testimony-wrap .user-img {
+  width: 80px;
+  height: 80px;
+  position: relative;
+  border-radius: 50%;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
+}
+.testimony-wrap .name {
+  font-weight: 500;
+  font-size: 20px;
+  margin-bottom: 0;
+  color: #000000;
+}
+.testimony-wrap .position {
+  font-size: 16px;
+  color: #4d4d4d;
 }
