--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -468,8 +468,9 @@ a {
 .testimony-section {
   position: relative;
   z-index: 0;
-  padding: 6em 0;
-  margin-bottom: 100px;
+  padding: 3em 0;
+  margin-bottom: 30px;
+  margin-top: 100px;
 }
 .testimony-section .img-bg {
   position: absolute;
@@ -511,6 +512,34 @@ a {
 .carousel-testimony{
   position: relative;
 }
+.swiper {
+  width: 80%;
+  height: 80%;
+  margin-top: 50px;
+}
+
+.swiper-slide {
+  text-align: center;
+  font-size: 17px;
+  background: #fff;
+
+  /* Center slide text vertically */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.swiper-wrapper{
+  padding-top: 1.5rem;
+}
+
+.swiper-slide img {
+  max-width: 10rem;
+  height: 10rem;
+  border-radius: 50%;
+  border: .5rem solid whitesmoke;
+}
+
 .testimony-wrap {
   display: block;
   position: relative;
@@ -521,7 +550,7 @@ a {
   border-radius: 4px;
   -webkit-box-shadow: 0px 30px 33px -41px rgba(0, 0, 0, 0.24);
   -moz-box-shadow: 0px 30px 33px -41px rgba(0, 0, 0, 0.24);
-  box-shadow: 0px 30px 33px -41px rgba(0, 0, 0, 0.24);
+  box-shadow: 0px 30px 33px -41px rgba(0, 0, 0, 0.4);
 }
 .testimony-wrap .icon {
   position: absolute;
@@ -530,23 +559,8 @@ a {
   width: 40px;
   height: 40px;
   border-radius: 50%;
-  background: #589167;
+  background: #503c3c;
 }
-/* .testimony-section .owl-carousel {
-  margin: 0;
-}
-.testimony-section .owl-carousel .owl-stage-outer {
-  padding: 1.5em 0 2em 0;
-  position: relative;
-}
-.owl-carousel.owl-drag .owl-item {
-  -ms-touch-action: pan-y;
-  touch-action: pan-y;
-}
-.owl-carousel .owl-item {
-  opacity: .4;
-}
-
 .testimony-wrap .icon span {
   color: #fff;
 }
@@ -554,6 +568,9 @@ a {
   width: 80px;
   height: 80px;
   position: relative;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  -ms-border-radius: 50%;
   border-radius: 50%;
 }
 .user-img{
@@ -562,12 +579,38 @@ a {
   background-position: center center;
 }
 .testimony-wrap .name {
-  font-weight: 500;
+  font-weight: 600;
   font-size: 20px;
   margin-bottom: 0;
   color: #000000;
+  text-align: left;
 }
 .testimony-wrap .position {
   font-size: 16px;
   color: #4d4d4d;
+}
+
+/* .text p::before{
+  content: "\f10d";
+  position: absolute;
+  top: 0;
+  left: 1rem;
+  font-size: 1.5rem;
+  font-family: "Font Awesome 6 Free";
+  font-weight: 900;
+  color: #503c3c;
+}
+.text p::after{
+  content: "\f10e";
+  position: absolute;
+  bottom: 0;
+  right: 1rem;
+  font-size: 1.5rem;
+  font-family: "Font Awesome 6 Free";
+  font-weight: 900;
+  color: #503c3c;
 } */
+.client-details{
+  margin-left: 10px;
+}
+
