--- a/src/components/topbar/topbar.css
+++ b/src/components/topbar/topbar.css
@@ -1,28 +1,12 @@
 #basic-nav-dropdown {
   color: white;
 }
-.topbar {
-  position: fixed;
+#ftco-navbar {
+  position: -webkit-sticky;
+  position: sticky;
   top: 0;
-  width: 100%;
-  z-index: 1040;
-  background-color: #3e3232; /* Adjust as needed */
-  color: white;
-  padding: 1px 1px 1px 1px;
+  z-index: 1000;
 }
-
-.navbar-main {
-  position: fixed;
-  top: 0; /* Adjust to match the height of the topbar */
-  width: 100%;
-  z-index: 1030; /* Ensure it stays below the topbar */
-  background-color: #503c3c; /* Ensure this matches the background color in JSX */
-  padding: 1px 1px 1px 1px; /* Add some padding for better spacing */
-}
-body {
-  padding-top: 120px; /* Adjust based on the combined height of both navbars */
-}
-
 .wrap {
   position: relative;
   z-index: 0;
