--- a/src/pages/order-now/order.css
+++ b/src/pages/order-now/order.css
@@ -31,7 +31,6 @@
 
 .default-form select {
     cursor: pointer;
-    /* background: #fff url(../images/icons/icon-select.png) right center no-repeat; */
 }
 
 .default-form input[type="email"], 
@@ -52,4 +51,34 @@
 }
 .default-form select option {
     text-indent: 15px;
+}
+.order-button{
+    text-align: left;
+}
+.btn-style:hover {
+    border-color: #3e3232 !important;
+    background: #3e3232;
+  }
+.btn-style {
+    position: relative;
+    padding: 8px 25px 9px;
+    line-height: 26px;
+    text-transform: capitalize;
+    background: #7e6363;
+    color: #fff !important;
+    font-size: 16px;
+    font-weight: 600;
+    border: 2px solid #736363 !important;
+    border-radius: 1px;
+}
+
+.theme-btn{
+    display: inline-block;
+    -webkit-transition: all 0.3s ease;
+}
+
+.default-form input:focus, .default-form select:focus, .default-form textarea:focus {
+    outline: 2px solid #5e3c3c; /* Green outline */
+      outline-offset: 2px; /* Space between the input box and the outline */
+      box-shadow: none; /* Remove default box-shadow */
 }
