phd dissertation added

--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -102,3 +102,11 @@ user agent stylesheet div {
 .style-links:hover {
   color: #a87c7c;
 }
+.style-links span{
+  margin-bottom: 10px;
+}
+.list-unstyled span{
+  margin-bottom: 10px;
+  margin-right: 5px;
+  
+}
