--- a/src/components/topbar/topbar.css
+++ b/src/components/topbar/topbar.css
@@ -611,50 +611,47 @@ input {
 .ftco-navbar-light .navbar-nav > .nav-item > .nav-link:hover {
   color: #fff;
 }
-/* General dropdown menu styles */
+
 .navbar-nav .nav-item.dropdown:hover .dropdown-menu {
   display: block;
-  margin-top: 0; /* Remove the default margin */
+  margin-top: 0;
 }
 
-/* Optional: Transition effect for smoother appearance */
 .dropdown-menu {
   transition: all 0.3s ease-in-out;
-  background-color: #343a40; /* Dark background color */
-  border: none; /* Remove border */
-  padding: 0; /* Remove default padding */
+  background-color: #343a40;
+  border: none;
+  padding: 0;
 }
 
-/* Styles specifically for all dropdown items */
 .dropdown-item {
-  color: #ffffff; /* White text color */
-  padding: 10px 20px; /* Custom padding */
-  transition: background-color 0.3s ease, color 0.3s ease; /* Smooth background and color transition */
+  color: #ffffff;
+  padding: 10px 20px;
+  transition: background-color 0.3s ease, color 0.3s ease;
 }
 
 .dropdown-item:hover {
-  background-color: #495057; /* Slightly lighter dark color on hover */
-  color: #00ff00; /* Change this to the desired color */
+  background-color: #495057;
 }
 
 .dropdown-item:active {
-  background-color: #6c757d; /* Change this to the desired color for active state */
-  color: #ffffff; /* Ensure text remains white */
+  background-color: hsl(208, 7%, 46%);
+  color: #ffffff;
 }
 .hoverable:hover {
   background-color: #a87c7c;
 }
-/* Assuming the class for dropdown items is 'dropdown-item' */
+
 .dropdown-item {
   padding: 10px;
-  width: 150px; /* Set a base width */
-  transition: width 0.3s ease; /* Smooth transition for the width change */
+  width: 150px;
+  transition: width 0.3s ease;
 }
 
 .dropdown-item:hover {
-  width: 200px; /* Increase width on hover */
+  /* width: 200px; Increase width on hover */
 }
 /* Apply to the first child only */
 .dropdown-item:first-child:hover {
-  width: 200px; /* Increase width on hover for the first item */
+  /* width: 200px; Increase width on hover for the first item */
 }
