--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -8,6 +8,13 @@
   position: relative;
   z-index: 0;
 }
+.align-items-center {
+  -webkit-box-align: center !important;
+  -ms-flex-align: center !important;
+  align-items: center !important;
+}
+
+
 
 @media (min-width: 992px) {
   .container {
@@ -135,6 +142,15 @@ p {
     -ms-flex: 0 0 33.33333%;
     flex: 0 0 33.33333%;
     max-width: 33.33333%;
+  }
+}
+
+@media (min-width: 768px) {
+  .col-md-6 {
+    -webkit-box-flex: 0;
+    -ms-flex: 0 0 50%;
+    flex: 0 0 50%;
+    max-width: 50%;
   }
 }
 
