section is added

--- a/src/components/topbar/topbar.css
+++ b/src/components/topbar/topbar.css
@@ -655,3 +655,4 @@ input {
 .dropdown-item:first-child:hover {
   /* width: 200px; Increase width on hover for the first item */
 }
+/* Media queries for responsiveness */
