--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -405,7 +405,14 @@ a {
   padding: 10px 10px 10px 10px;
   padding-left: 15px;
 }
-
+.boxdesign1 {
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+  border: none;
+  transition: box-shadow 0.3s ease;
+}
+.boxdesign1:hover {
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.4); /* Increase shadow on hover */
+}
 .col-md-8,
 .col-xl-3,
 .col-md-7,
